added the dataprep step

--- a/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
+++ b/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
@@ -85,6 +85,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "656e1bd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_client = MLClient.from_config(\n",
+    "    credential=credential,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1398f7b3",
    "metadata": {},
@@ -217,9 +229,7 @@
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\"\n",
-    "    if USE_GPU\n",
-    "    else \"transformers-cpu:1\",\n",
+    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
     "    # The command that will be run in the component\n",
     "    command=\"python baseline.py --dataset_name ${{inputs.dataset_name}} --dataset_config ${{inputs.dataset_config}} \"\n",
     "    \"--text_column ${{inputs.text_column}} --summary_column ${{inputs.summary_column}} \"\n",
@@ -280,10 +290,7 @@
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    #     environment=pipeline_job_env,\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\"\n",
-    "    if USE_GPU\n",
-    "    else \"transformers-cpu:1\",\n",
+    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
     "    # The command that will be run in the component\n",
     "    command=\"python data_prep.py --dataset_name ${{inputs.dataset_name}} --dataset_config ${{inputs.dataset_config}} \"\n",
     "    \"--text_column ${{inputs.text_column}} --summary_column ${{inputs.summary_column}} \"\n",
@@ -355,9 +362,9 @@
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
     "    #     environment=pipeline_job_env,\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\"\n",
-    "    if USE_GPU\n",
-    "    else \"transformers-cpu:1\",\n",
+    "    # environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
+    "    environment= f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
+    "\n",
     "    # The command that will be run in the component\n",
     "    command=\"python run.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
     "    \"[--text_column ${{inputs.text_column}}] [--summary_column ${{inputs.summary_column}}] [--preprocessed_datasets ${{inputs.preprocessed_datasets}}] \"\n",
@@ -366,6 +373,7 @@
     "    \"[--model_name ${{inputs.model_name}}] [--registered_model_name ${{inputs.registered_model_name}}] --output_dir outputs \"\n",
     "    \"--num_train_epochs ${{inputs.num_train_epochs}}  --trained_model_path ${{outputs.trained_model_path}} \"\n",
     "    \"--disable_tqdm True --do_train --do_eval [--source_prefix ${{inputs.source_prefix}}] [--model_path ${{inputs.model_path}}]\",\n",
+    "\n",
     ")\n",
     "\n",
     "train_component = ml_client.create_or_update(train_component)\n",
@@ -420,10 +428,7 @@
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    #     environment=pipeline_job_env,\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\"\n",
-    "    if USE_GPU\n",
-    "    else \"transformers-cpu:1\",\n",
+    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
     "    # The command that will be run in the component\n",
     "    command=\"python run.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
     "    \"[--text_column ${{inputs.text_column}}] [--summary_column ${{inputs.summary_column}}] [--preprocessed_datasets ${{inputs.preprocessed_datasets}}] \"\n",
@@ -446,7 +451,21 @@
     "# 2. Train and Evaluate Hugging Face Model in AML\n",
     "\n",
     "## 2.1 Creating Azure ML Pipeline\n",
-    "The created component can be used in a pipeline to be connected to other steps if required. For training, we use the [CNN Dailymail](https://huggingface.co/datasets/cnn_dailymail) for text summarization. To mimic the scenario we explained in the first section, we use [PubMed dataset](https://huggingface.co/datasets/ccdv/pubmed-summarization) for evaulation to estimate the performance of a generically trained model on medial domain task."
+    "The created component can be used in a pipeline to be connected to other steps if required. For training, we use the [CNN Dailymail](https://huggingface.co/datasets/cnn_dailymail) for text summarization. To mimic the scenario we explained in the first section, we use [PubMed dataset](https://huggingface.co/datasets/ccdv/pubmed-summarization) for evaulation to estimate the performance of a generically trained model on medial domain task.\n",
+    "\n",
+    "Our training component supports distribution training, the settings should be set during the build time. Based on the compute we are using, we might be able to increase the number of GPUs per node. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a1216c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the number of nodes and number of GPUs per node\n",
+    "num_nodes = 2\n",
+    "num_gpus_per_node = 1"
    ]
   },
   {
@@ -501,6 +520,10 @@
     "        per_device_eval_batch_size=batch_size,\n",
     "        source_prefix=\"summarize: \",\n",
     "    )\n",
+    "\n",
+    "    train_step.distribution= dict(type=\"pytorch\",\n",
+    "                process_count_per_instance=num_gpus_per_node) # number of gpus\n",
+    "    train_step.resources=dict(instance_count=num_nodes)  # number of nodes\n",
     "\n",
     "    data_prep_for_evaluation_step = data_prep_component(\n",
     "        dataset_name=\"ccdv/pubmed-summarization\",\n",
@@ -586,6 +609,8 @@
     "        \"num_train_epochs\": num_train_epochs,\n",
     "        \"batch_size\": batch_size,\n",
     "        \"learning_rate\": learning_rate,\n",
+    "        \"num_nodes\": num_nodes,\n",
+    "        \"num_gpus_per_node\":num_gpus_per_node \n",
     "    },\n",
     ")\n",
     "# get a URL for the status of the job\n",
@@ -610,7 +635,7 @@
    "outputs": [],
    "source": [
     "model_name = \"t5-small\"\n",
-    "max_samples = -1\n",
+    "max_samples = 10000\n",
     "num_train_epochs = 5\n",
     "batch_size = 8\n",
     "learning_rate = 5e-5\n",
@@ -743,7 +768,7 @@
    "outputs": [],
    "source": [
     "model_name = \"t5-small\"\n",
-    "max_samples = -1\n",
+    "max_samples = 10000\n",
     "num_train_epochs = 5\n",
     "batch_size = 8\n",
     "learning_rate = 5e-5\n",
@@ -1027,14 +1052,6 @@
    "source": [
     "ml_client.online_deployments.delete(name=\"cpu\", endpoint_name=online_endpoint_name)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51a62d62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
