fix for distributed training

--- a/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
+++ b/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
@@ -85,18 +85,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "656e1bd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ml_client = MLClient.from_config(\n",
-    "    credential=credential,\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1398f7b3",
    "metadata": {},
@@ -364,7 +352,10 @@
     "    #     environment=pipeline_job_env,\n",
     "    # environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
     "    environment= f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
-    "\n",
+    "    \n",
+    "    distribution= dict(type=\"pytorch\",\n",
+    "                process_count_per_instance=1), # number of gpus\n",
+    "    resources=dict(instance_count=1),  # number of nodes\n",
     "    # The command that will be run in the component\n",
     "    command=\"python run.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
     "    \"[--text_column ${{inputs.text_column}}] [--summary_column ${{inputs.summary_column}}] [--preprocessed_datasets ${{inputs.preprocessed_datasets}}] \"\n",
@@ -464,7 +455,7 @@
    "outputs": [],
    "source": [
     "# Set the number of nodes and number of GPUs per node\n",
-    "num_nodes = 2\n",
+    "num_nodes = 4\n",
     "num_gpus_per_node = 1"
    ]
   },
@@ -564,7 +555,7 @@
     "# Let's instantiate the pipeline with the parameters of our choice\n",
     "model_name = \"t5-small\"\n",
     "max_samples = 1000\n",
-    "num_train_epochs = 2\n",
+    "num_train_epochs = 1\n",
     "batch_size = 8\n",
     "learning_rate = 5e-5\n",
     "\n",
@@ -624,7 +615,7 @@
    "source": [
     "![](media/baseline_train_evaluate.png)\n",
     "\n",
-    "Wait until the pipeline run ends, now it is time call the pipeline with all the data points and more effective number of epochs.\n"
+    "Wait until the pipeline run ends, now it is time call the pipeline with more data points and a more effective number of epochs.\n"
    ]
   },
   {
@@ -658,7 +649,7 @@
     "| Method  |eval_rouge1|eval_rouge2|eval_rougeL|eval_rougeLsum |\n",
     "|---------|-----------|-----------|-----------|---------------|\n",
     "|baseline | 26.98    |9.16     | 16.94    |        24.37 |\n",
-    "|t5-small trained on CNN news         |     |    |     |         |\n",
+    "|t5-small trained on CNN news         | to be completed    |    |     |         |\n",
     "\n",
     "\n",
     "\n",
@@ -667,6 +658,18 @@
     "![](media/baseline_train_finetune_evaluate.png)\n",
     "\n",
     "Let's use the same components but expand the pipeline to include the extra finetunig step. There will be no cost for rerunnig the previous steps, as the system will reuse the results if no change is made to the inputs. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f92789d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the number of nodes and number of GPUs per node\n",
+    "num_nodes = 4\n",
+    "num_gpus_per_node = 1"
    ]
   },
   {
@@ -718,6 +721,10 @@
     "        source_prefix=\"summarize: \",\n",
     "    )\n",
     "\n",
+    "    train_step.distribution= dict(type=\"pytorch\",\n",
+    "            process_count_per_instance=num_gpus_per_node) # number of gpus\n",
+    "    train_step.resources=dict(instance_count=num_nodes)  # number of nodes\n",
+    "\n",
     "    data_prep_for_evaluation_step = data_prep_component(\n",
     "        dataset_name=\"ccdv/pubmed-summarization\",\n",
     "        dataset_config=\"section\",\n",
@@ -749,6 +756,10 @@
     "        per_device_eval_batch_size=batch_size,\n",
     "        source_prefix=\"summarize: \",\n",
     "    )\n",
+    "    train_step_2.distribution= dict(type=\"pytorch\",\n",
+    "                process_count_per_instance=num_gpus_per_node) # number of gpus\n",
+    "    train_step_2.resources=dict(instance_count=num_nodes)  # number of nodes\n",
+    "    \n",
     "    # This is not effective yet\n",
     "    train_step_2.comment = \"fine tuning on medical data\"\n",
     "\n",
@@ -790,6 +801,15 @@
     "    experiment_name=\"text-summarization-example\",\n",
     "    # If there is no dependency, pipeline run will continue even after the failure of one component\n",
     "    continue_run_on_step_failure=True,\n",
+    "    tags={\n",
+    "        \"model_name\": model_name,\n",
+    "        \"max_samples\": max_samples,\n",
+    "        \"num_train_epochs\": num_train_epochs,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"learning_rate\": learning_rate,\n",
+    "        \"num_nodes\": num_nodes,\n",
+    "        \"num_gpus_per_node\":num_gpus_per_node \n",
+    "    },\n",
     ")\n",
     "# get a URL for the status of the job\n",
     "webbrowser.open(returned_job.services[\"Studio\"].endpoint)\n"
