--- a/cli/jobs/pipelines/pipeline-type.ipynb
+++ b/cli/jobs/pipelines/pipeline-type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "    # Call component obj as function: apply given inputs & parameters to create a node in pipeline\n",
     "    job_file_output_node = job_file_output()\n",
     "    job_file_input_node = job_file_input(input_file=job_file_output_node.outputs.output_file)\n",
-    "    job_file_output_node.outputs.output_file.type='uri_file'\n",
+    "    # job_file_output_node.outputs.output_file.type='uri_file'\n",
     "    # job_file_input_node.inputs.input_file.type='uri_file'\n",
     "    # job_file_input_node.inputs.input_file.mode='download'\n",
     "\n",
@@ -74,19 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Name</th><th>Type</th><th>Status</th><th>Details Page</th></tr><tr><td>pipelines</td><td>loyal_pin_9ly43h35fm</td><td>pipeline</td><td>Preparing</td><td><a href=\"https://ml.azure.com/runs/loyal_pin_9ly43h35fm?wsid=/subscriptions/96aede12-2f73-41cb-b983-6d11a904839b/resourcegroups/sdk/workspaces/sdk-master&amp;tid=72f988bf-86f1-41af-91ab-2d7cd011db47\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Name</th><th>Type</th><th>Status</th><th>Details Page</th></tr><tr><td>pipelines</td><td>kind_moon_m932hvyf6l</td><td>pipeline</td><td>Preparing</td><td><a href=\"https://ml.azure.com/runs/kind_moon_m932hvyf6l?wsid=/subscriptions/96aede12-2f73-41cb-b983-6d11a904839b/resourcegroups/sdk/workspaces/sdk-master&amp;tid=72f988bf-86f1-41af-91ab-2d7cd011db47\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td></tr></table>"
       ],
       "text/plain": [
-       "PipelineJob({'inputs': {}, 'outputs': {}, 'component': _PipelineComponent({'components': {}, 'auto_increment_version': False, 'is_anonymous': True, 'name': '82a6fbe7-a717-4ada-9d77-a49b48418c36', 'description': None, 'tags': {}, 'properties': {}, 'id': None, 'base_path': None, 'creation_context': None, 'serialize': <msrest.serialization.Serializer object at 0x000002047589AF10>, 'version': '1', 'latest_version': None, 'schema': None, 'type': 'pipeline_component', 'display_name': 'pipeline_type', 'is_deterministic': True, 'inputs': {}, 'outputs': {}, 'source': <ComponentSource.REST: 'REST'>, 'yaml_str': None, 'other_parameter': {}, 'func': <function [component] pipeline_type at 0x000002047565C820>}), 'type': 'pipeline', 'status': 'Preparing', 'log_files': None, 'name': 'loyal_pin_9ly43h35fm', 'description': None, 'tags': {}, 'properties': {'mlflow.source.git.repoURL': 'https://github.com/Azure/azureml-examples.git', 'mlflow.source.git.branch': 'lochen/model-test', 'mlflow.source.git.commit': '5c22bd340684dbe8b77f18e5ba0dbd73a378d726', 'azureml.git.dirty': 'True', 'azureml.runsource': 'azureml.PipelineRun', 'runSource': 'MFE', 'runType': 'HTTP', 'azureml.parameters': '{}', 'azureml.continue_on_step_failure': 'False', 'azureml.continue_on_failed_optional_input': 'True', 'azureml.pipelineComponent': 'pipelinerun'}, 'id': '/subscriptions/96aede12-2f73-41cb-b983-6d11a904839b/resourceGroups/sdk/providers/Microsoft.MachineLearningServices/workspaces/sdk-master/jobs/loyal_pin_9ly43h35fm', 'base_path': './', 'creation_context': <azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.SystemData object at 0x00000204758A55E0>, 'serialize': <msrest.serialization.Serializer object at 0x00000204758A5700>, 'display_name': 'pipeline_type', 'experiment_name': 'pipelines', 'compute': None, 'services': {'Tracking': <azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.JobService object at 0x00000204758A5A90>, 'Studio': <azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.JobService object at 0x00000204758A5AC0>}, 'jobs': {'job_file_output_node': {}, 'job_file_input_node': {}}, 'settings': <azure.ai.ml.entities._job.pipeline.pipeline_job_settings.PipelineJobSettings object at 0x000002047589A5E0>, 'identity': None, 'schedule': None, 'default_code': None, 'default_environment': None})"
+       "PipelineJob({'inputs': {}, 'outputs': {}, 'component': _PipelineComponent({'components': {}, 'auto_increment_version': False, 'is_anonymous': True, 'name': '880fdf56-08ab-4338-b7bf-3f92e8cb5a6d', 'description': None, 'tags': {}, 'properties': {}, 'id': None, 'base_path': None, 'creation_context': None, 'serialize': <msrest.serialization.Serializer object at 0x000001E36B148340>, 'version': '1', 'latest_version': None, 'schema': None, 'type': 'pipeline_component', 'display_name': 'pipeline_type', 'is_deterministic': True, 'inputs': {}, 'outputs': {}, 'source': <ComponentSource.REST: 'REST'>, 'yaml_str': None, 'other_parameter': {}, 'func': <function [component] pipeline_type at 0x000001E366803700>}), 'type': 'pipeline', 'status': 'Preparing', 'log_files': None, 'name': 'kind_moon_m932hvyf6l', 'description': None, 'tags': {}, 'properties': {'mlflow.source.git.repoURL': 'https://github.com/Azure/azureml-examples.git', 'mlflow.source.git.branch': 'lochen/model-test', 'mlflow.source.git.commit': '5c22bd340684dbe8b77f18e5ba0dbd73a378d726', 'azureml.git.dirty': 'True', 'azureml.runsource': 'azureml.PipelineRun', 'runSource': 'MFE', 'runType': 'HTTP', 'azureml.parameters': '{}', 'azureml.continue_on_step_failure': 'False', 'azureml.continue_on_failed_optional_input': 'True', 'azureml.pipelineComponent': 'pipelinerun'}, 'id': '/subscriptions/96aede12-2f73-41cb-b983-6d11a904839b/resourceGroups/sdk/providers/Microsoft.MachineLearningServices/workspaces/sdk-master/jobs/kind_moon_m932hvyf6l', 'base_path': './', 'creation_context': <azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.SystemData object at 0x000001E36B044C10>, 'serialize': <msrest.serialization.Serializer object at 0x000001E36B044C40>, 'display_name': 'pipeline_type', 'experiment_name': 'pipelines', 'compute': None, 'services': {'Tracking': <azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.JobService object at 0x000001E36B044130>, 'Studio': <azure.ai.ml._restclient.v2022_02_01_preview.models._models_py3.JobService object at 0x000001E36B0447C0>}, 'jobs': {'job_file_output_node': {}, 'job_file_input_node': {}}, 'settings': <azure.ai.ml.entities._job.pipeline.pipeline_job_settings.PipelineJobSettings object at 0x000001E36993EFA0>, 'identity': None, 'schedule': None, 'default_code': None, 'default_environment': None})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
