Applying Jeff's reviews

--- a/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
+++ b/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
@@ -118,7 +118,7 @@
     "    # nodes in cluster\n",
     "    max_instances=6,\n",
     "    # How many seconds will the node running after the job termination\n",
-    "    idle_time_before_scale_down=120,\n",
+    "    idle_time_before_scale_down=600,\n",
     "    # Dedicated or LowPriority. The latter is cheaper but there is a chance of job termination\n",
     "    tier=\"Dedicated\",\n",
     ")\n",
@@ -198,7 +198,7 @@
     "# importing the CommandComponent Package\n",
     "from azure.ai.ml.entities import CommandComponent\n",
     "\n",
-    "src_dir = \"src/run_summarization/\"\n",
+    "src_dir = \"src/summarization/\"\n",
     "\n",
     "\n",
     "baseline_component = CommandComponent(\n",
@@ -217,9 +217,9 @@
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
+    "    environment=f\"{pipeline_job_env.name}@latest\",\n",
     "    # The command that will be run in the component\n",
-    "    command=\"python baseline.py --dataset_name ${{inputs.dataset_name}} --dataset_config ${{inputs.dataset_config}} \"\n",
+    "    command=\"python baseline_evaluation.py --dataset_name ${{inputs.dataset_name}} --dataset_config ${{inputs.dataset_config}} \"\n",
     "    \"--text_column ${{inputs.text_column}} --summary_column ${{inputs.summary_column}} \"\n",
     "    \"--max_samples ${{inputs.max_samples}}\",\n",
     ")\n",
@@ -250,7 +250,7 @@
     "# importing the CommandComponent Package\n",
     "from azure.ai.ml.entities import CommandComponent\n",
     "\n",
-    "src_dir = \"src/run_summarization/\"\n",
+    "src_dir = \"src/summarization/\"\n",
     "\n",
     "\n",
     "data_prep_component = CommandComponent(\n",
@@ -273,19 +273,19 @@
     "    ),\n",
     "    # The dictionary of the outputs. Each item is a dictionary itself.\n",
     "    outputs=dict(\n",
-    "        encodings_datasets=dict(type=\"path\"),\n",
+    "        encodings=dict(type=\"path\"),\n",
     "    ),\n",
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
+    "    environment=f\"{pipeline_job_env.name}@latest\",\n",
     "    # The command that will be run in the component\n",
     "    command=\"python data_prep.py --dataset_name ${{inputs.dataset_name}} --dataset_config ${{inputs.dataset_config}} \"\n",
     "    \"--text_column ${{inputs.text_column}} --summary_column ${{inputs.summary_column}} \"\n",
     "    \"--max_samples ${{inputs.max_samples}} --model_checkpoint ${{inputs.model_checkpoint}} \"\n",
     "    \"[--max_input_length ${{inputs.max_input_length}}]  [--max_target_length ${{inputs.max_target_length}}] \"\n",
     "    \"[--padding ${{inputs.padding}}] [--source_prefix ${{inputs.source_prefix}}] \"\n",
-    "    \"--encodings_datasets ${{outputs.encodings_datasets}}\",\n",
+    "    \"--encodings ${{outputs.encodings}}\",\n",
     ")\n",
     "\n",
     "data_prep_component = ml_client.create_or_update(data_prep_component)\n",
@@ -301,7 +301,7 @@
    "metadata": {},
    "source": [
     "### 1.2.3 Train Component\n",
-    "we have created a generic summarization script that can handle training and evaluation tasks with the right argument. The code is based on [`run_summarization.py`](https://github.com/huggingface/transformers/blob/main/examples/pytorch/summarization/run_summarization.py) in huggingface example repository. We use the same script to create two components, one for training and one for evaluation. The design choice was arbitrary as a single component with different inputs could be used for both tasks. \n",
+    "We have created a generic summarization script that can handle training and evaluation tasks with the right argument. The code is based on [`run_summarization.py`](https://github.com/huggingface/transformers/blob/main/examples/pytorch/summarization/run_summarization.py) in huggingface example repository. We use the same script to create two components, one for training and one for evaluation. The design choice was arbitrary as a single component with different inputs could be used for both tasks. \n",
     "\n",
     "Here both data related and training related arguments are exposed. We envoke the training action by adding `--do_train` input argument to the script. \n"
    ]
@@ -317,7 +317,7 @@
     "from azure.ai.ml.entities import CommandComponent\n",
     "from azure.ai.ml import Input\n",
     "\n",
-    "src_dir = \"src/run_summarization/\"\n",
+    "src_dir = \"src/summarization/\"\n",
     "\n",
     "\n",
     "train_component = CommandComponent(\n",
@@ -349,22 +349,17 @@
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    #     environment=pipeline_job_env,\n",
-    "    # environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
-    "    environment= f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
-    "    \n",
-    "    distribution= dict(type=\"pytorch\",\n",
-    "                process_count_per_instance=1), # number of gpus\n",
+    "    environment=f\"{pipeline_job_env.name}@latest\",\n",
+    "    distribution=dict(type=\"pytorch\", process_count_per_instance=1),  # number of gpus\n",
     "    resources=dict(instance_count=1),  # number of nodes\n",
     "    # The command that will be run in the component\n",
-    "    command=\"python run.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
+    "    command=\"python run_summarization.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
     "    \"[--text_column ${{inputs.text_column}}] [--summary_column ${{inputs.summary_column}}] [--preprocessed_datasets ${{inputs.preprocessed_datasets}}] \"\n",
     "    \"--learning_rate ${{inputs.learning_rate}} --per_device_train_batch_size ${{inputs.per_device_train_batch_size}} \"\n",
     "    \"--per_device_eval_batch_size ${{inputs.per_device_eval_batch_size}} --max_samples ${{inputs.max_samples}} \"\n",
     "    \"[--model_name ${{inputs.model_name}}] [--registered_model_name ${{inputs.registered_model_name}}] --output_dir outputs \"\n",
     "    \"--num_train_epochs ${{inputs.num_train_epochs}}  --trained_model_path ${{outputs.trained_model_path}} \"\n",
     "    \"--disable_tqdm True --do_train --do_eval [--source_prefix ${{inputs.source_prefix}}] [--model_path ${{inputs.model_path}}]\",\n",
-    "\n",
     ")\n",
     "\n",
     "train_component = ml_client.create_or_update(train_component)\n",
@@ -393,7 +388,7 @@
     "# importing the CommandComponent Package\n",
     "from azure.ai.ml.entities import CommandComponent\n",
     "\n",
-    "src_dir = \"src/run_summarization/\"\n",
+    "src_dir = \"src/summarization/\"\n",
     "\n",
     "\n",
     "evaluate_component = CommandComponent(\n",
@@ -419,9 +414,9 @@
     "    # The source folder of the component\n",
     "    code=src_dir,\n",
     "    # The environment the component job will be using\n",
-    "    environment=f\"{pipeline_job_env.name}:{pipeline_job_env.version}\",\n",
+    "    environment=f\"{pipeline_job_env.name}@latest\",\n",
     "    # The command that will be run in the component\n",
-    "    command=\"python run.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
+    "    command=\"python run_summarization.py [--dataset_name ${{inputs.dataset_name}}] [--dataset_config ${{inputs.dataset_config}}] \"\n",
     "    \"[--text_column ${{inputs.text_column}}] [--summary_column ${{inputs.summary_column}}] [--preprocessed_datasets ${{inputs.preprocessed_datasets}}] \"\n",
     "    \"[--model_name ${{inputs.model_name}}] --max_samples ${{inputs.max_samples}} --output_dir outputs \"\n",
     "    \"[--model_path ${{inputs.model_path}}] --trained_model_path ${{outputs.trained_model_path}} --do_eval\",\n",
@@ -502,7 +497,7 @@
     "    )\n",
     "\n",
     "    train_step = train_component(\n",
-    "        preprocessed_datasets=data_prep_for_training_step.outputs.encodings_datasets,\n",
+    "        preprocessed_datasets=data_prep_for_training_step.outputs.encodings,\n",
     "        model_name=model_name,\n",
     "        max_samples=max_samples,\n",
     "        learning_rate=learning_rate,\n",
@@ -512,9 +507,10 @@
     "        source_prefix=\"summarize: \",\n",
     "    )\n",
     "\n",
-    "    train_step.distribution= dict(type=\"pytorch\",\n",
-    "                process_count_per_instance=num_gpus_per_node) # number of gpus\n",
-    "    train_step.resources=dict(instance_count=num_nodes)  # number of nodes\n",
+    "    train_step.distribution = dict(\n",
+    "        type=\"pytorch\", process_count_per_instance=num_gpus_per_node\n",
+    "    )  # number of gpus\n",
+    "    train_step.resources = dict(instance_count=num_nodes)  # number of nodes\n",
     "\n",
     "    data_prep_for_evaluation_step = data_prep_component(\n",
     "        dataset_name=\"ccdv/pubmed-summarization\",\n",
@@ -530,7 +526,7 @@
     "    )\n",
     "\n",
     "    evaluate_step = evaluate_component(\n",
-    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings_datasets,\n",
+    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings,\n",
     "        model_name=\"\",\n",
     "        model_path=train_step.outputs.trained_model_path,\n",
     "        max_samples=max_samples,\n",
@@ -642,22 +638,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b3a640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# submit the pipeline job\n",
+    "returned_job = ml_client.jobs.create_or_update(\n",
+    "    pipeline,\n",
+    "    # Project's name\n",
+    "    experiment_name=\"text-summarization-example\",\n",
+    "    # If there is no dependency, pipeline run will continue even after the failure of one component\n",
+    "    continue_run_on_step_failure=True,\n",
+    "    tags={\n",
+    "        \"model_name\": model_name,\n",
+    "        \"max_samples\": max_samples,\n",
+    "        \"num_train_epochs\": num_train_epochs,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"learning_rate\": learning_rate,\n",
+    "        \"num_nodes\": num_nodes,\n",
+    "        \"num_gpus_per_node\":num_gpus_per_node \n",
+    "    },\n",
+    ")\n",
+    "# get a URL for the status of the job\n",
+    "webbrowser.open(returned_job.services[\"Studio\"].endpoint)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6a10d189",
    "metadata": {},
    "source": [
-    "| Method  |eval_rouge1|eval_rouge2|eval_rougeL|eval_rougeLsum |\n",
-    "|---------|-----------|-----------|-----------|---------------|\n",
-    "|baseline | 26.98    |9.16     | 16.94    |        24.37 |\n",
-    "|t5-small trained on CNN news         | to be completed    |    |     |         |\n",
-    "\n",
-    "\n",
-    "\n",
-    "Checking the result, it seems that there is room for finetuning the model to be more domain aware. Here we use the PubMed dataset to finetune the model we trained in the previous stage, to see the effect on the evaluation metrics.\n",
+    "Checking the result and compare with the baseline, it seems that there is room for finetuning the model to be more domain aware. Here we use the PubMed dataset to finetune the model we trained in the previous stage, to see the effect on the evaluation metrics.\n",
     "\n",
     "![](media/baseline_train_finetune_evaluate.png)\n",
     "\n",
-    "Let's use the same components but expand the pipeline to include the extra finetunig step. There will be no cost for rerunnig the previous steps, as the system will reuse the results if no change is made to the inputs. "
+    "Let's use the same components but expand the pipeline to include the extra finetunig step. There will be no cost for rerunnig the previous steps, as the system will reuse the results if no change is made to the inputs. \n",
+    "\n",
+    "| Method  |eval_rouge1|eval_rouge2|eval_rougeL|eval_rougeLsum |\n",
+    "|---------|-----------|-----------|-----------|---------------|\n",
+    "|baseline | 26.99    |9.16     | 16.95    |        24.38 |\n",
+    "|t5-small trained on CNN news         | 25.963    |  10.028  |  20.131   |   21.801      |\n",
+    "|t5-small finetuned on CNN PubMed         | 28.399    |  11.477  |  22.814   |   24.292      |"
    ]
   },
   {
@@ -711,7 +734,7 @@
     "    )\n",
     "\n",
     "    train_step = train_component(\n",
-    "        preprocessed_datasets=data_prep_for_training_step.outputs.encodings_datasets,\n",
+    "        preprocessed_datasets=data_prep_for_training_step.outputs.encodings,\n",
     "        model_name=model_name,\n",
     "        max_samples=max_samples,\n",
     "        learning_rate=learning_rate,\n",
@@ -739,14 +762,14 @@
     "    )\n",
     "\n",
     "    evaluate_step = evaluate_component(\n",
-    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings_datasets,\n",
+    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings,\n",
     "        model_name=\"\",\n",
     "        model_path=train_step.outputs.trained_model_path,\n",
     "        max_samples=max_samples,\n",
     "    )\n",
     "\n",
     "    train_step_2 = train_component(\n",
-    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings_datasets,\n",
+    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings,\n",
     "        registered_model_name=\"t5-small-cnn-pubmed\",\n",
     "        model_path=train_step.outputs.trained_model_path,\n",
     "        max_samples=max_samples,\n",
@@ -764,7 +787,7 @@
     "    train_step_2.comment = \"fine tuning on medical data\"\n",
     "\n",
     "    evaluate_step_2 = evaluate_component(\n",
-    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings_datasets,\n",
+    "        preprocessed_datasets=data_prep_for_evaluation_step.outputs.encodings,\n",
     "        model_name=\"\",\n",
     "        model_path=train_step_2.outputs.trained_model_path,\n",
     "        max_samples=max_samples,\n",
