added summarization intro

--- a/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
+++ b/tutorials/e2e-huggingface-summarization/e2e-dl-huggingface-summarization.ipynb
@@ -45,6 +45,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b672aeb",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "Text summarizarion is a task that tries to condense a text, usually an article, into a few sentences. The idea is to keep the key informatioanl elements of the context. Since the outout of this task is a short paragrah, evaluation should be done using text comparison methods. One widely used scoring method is [ROUGE](https://aclanthology.org/W04-1013/) score, which uses the count of common unigrams, bigrams, and subsequences between the candidate the reference texts, to evaluate the quality of the generated summary.\n",
+    "\n",
+    "Text summarization metrics are not standardized, therefore it is a good practice if we create a baseline to compare the results we get from our transformer models. A simple method can be using the first three sentences of the text as the summary.\n",
+    "\n",
+    "![](media/baseline_train_evaluate.png)\n",
+    "\n",
+    "In this work, we first run the baseline evaluator to calculate some reference summarization scores, then we prepare our data for finetuning, finetune a model, and evaluate the model performance against the prelabeled data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "550fe006",
    "metadata": {},
    "source": [
@@ -185,7 +200,7 @@
    "metadata": {},
    "source": [
     "### 1.2.1 Baseline Evaluation Component\n",
-    "Text summarization metrics are not standardized, therefore it is a good practice if we create a baseline to compare the results we get from our transformer models. A simple method can be using the first three sentences of the text as the summary. We have implemented that in the baseline component below. "
+    "We have implemented a baseline component below. It treats the first three sentences of each article as the summary and evaulate that agains the provided labels using ROUGE scores. "
    ]
   },
   {
@@ -609,8 +624,6 @@
    "id": "eb992690",
    "metadata": {},
    "source": [
-    "![](media/baseline_train_evaluate.png)\n",
-    "\n",
     "Wait until the pipeline run ends, now it is time call the pipeline with more data points and a more effective number of epochs.\n"
    ]
   },
