--- a/sdk/jobs/pipelines/2c_nyc_taxi_data_regression/nyc_taxi_data_regression.ipynb
+++ b/sdk/jobs/pipelines/2c_nyc_taxi_data_regression/nyc_taxi_data_regression.ipynb
@@ -129,14 +129,17 @@
     "    train_with_sample_data = train_model(\n",
     "        training_data=transform_sample_data.outputs.transformed_data\n",
     "    )\n",
+    "    train_with_sample_data.outputs.model_output.type='mlflow_model'\n",
     "    predict_with_sample_data = predict_result(\n",
     "        model_input=train_with_sample_data.outputs.model_output,\n",
     "        test_data=train_with_sample_data.outputs.test_data,\n",
     "    )\n",
+    "    predict_with_sample_data.inputs.model_input.type='mlflow_model'\n",
     "    score_with_sample_data = score_data(\n",
     "        predictions=predict_with_sample_data.outputs.predictions,\n",
     "        model=train_with_sample_data.outputs.model_output,\n",
     "    )\n",
+    "    score_with_sample_data.inputs.model.type='mlflow_model'\n",
     "    return {\n",
     "        \"pipeline_job_prepped_data\": prepare_sample_data.outputs.prep_data,\n",
     "        \"pipeline_job_transformed_data\": transform_sample_data.outputs.transformed_data,\n",
@@ -202,13 +205,10 @@
   "description": {
    "description": "Build pipeline with components for 5 jobs - prep data, transform data, train model, predict results and evaluate model performance"
   },
-  "interpreter": {
-   "hash": "3e9e0e270b75c5e6da2e22113ba4f77b864d68f95da6601809c29e46c73ae6bb"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
+   "display_name": "Python 3.7.8 64-bit",
    "language": "python",
-   "name": "python38-azureml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -220,7 +220,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "727b410030f20083a8dadbe78e3f0c3cba212580ac111eb7b243827f2188ccac"
+   }
   }
  },
  "nbformat": 4,
